--- a/index.html
+++ b/index.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<<<<<<< HEAD
-<<<<<<< HEAD
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+
         <title>Anime Nerd</title>
     </head>
     <body>
         <article>
+            <p id="title">The Greatness of Anime</p>
         <section>
-            <header><h3>I love Anime</h3></header>
+            <header><h3 class="silly">I love Anime</h3></header>
             <p>If there is one thing that has kept me going this past few years it is anime.<br />
             Anime is a wonderful medium to enjoy as it lets you to escape this mundane reality.<br />
         If there was one person who anime could benefit it would be me.</p>
         <aside><em>Anime is Japanese animation</em></aside>
         </section>
         <section>
-            <header><h3>The Best Shows</h3></header>
+            <header><h3 class="serious">The Best Shows</h3></header>
             <p>I would have to say that the best shows I've seen are Clannad and Death Note. <br />
             They provide emotional and interesting takes on the human experience.</p>
         </section>
         <address>86 Mountain Road</address>
         </article>
-=======
-=======
->>>>>>> 4e2a12d733714422f288c555c9696a24d94e0cf4
-        <title>The First Web Page</title>
-    </head>
-    <body>
-        <p>
-            In the beginning, there was a big cloud. The End.
-        </p>
-<<<<<<< HEAD
->>>>>>> 4e2a12d733714422f288c555c9696a24d94e0cf4
-=======
->>>>>>> 4e2a12d733714422f288c555c9696a24d94e0cf4
     </body>
 </html>
